# arrowspace_dorothea

./: .gitignore  00_ingestion.py  00_quick_test_ingestion.py  01_prepare_for_wiring.py  02_preliminary.py  03_estimate_params_wiring.py  04_evaluation.py  05_sota_nips_comparison.py  EVALUATION.md  EXAMPLE_OUTPUT.md  LICENSE  PRELIMINARY_NORM.md  README.md  WIRING_PARAMS_ESTIMATION.md  requirements.txt
dorothea_wiring/: Cargo.toml
experiments/: 001.md  002.md
storage/: 001_dataset_92c95b_eval_zeroed.csv  003_grid_search_results.csv  003_sparse_output.txt  005_denorm_sweep_results_gaussian.csv  005_denorm_sweep_results_normalized_baseline.csv  006_[wrong_score]output_wiring_comparative.txt  006_dorothea_umap_embeddings_high_compression.csv  006_dorothea_umap_embeddings_tight_clusters.csv  007_dorothea_lambda_distributions.csv  007_dorothea_umap_embeddings_dense_graph.csv  007_dorothea_umap_embeddings_gaussian_best.csv  007_dorothea_umap_embeddings_sparse_graph.csv  007_dorothea_umap_embeddings_tight_clusters.csv  007_output_wiring_comparative.txt  dataset_64b6fa_eval_results.csv  dataset_64b6fa_eval_zeroed.csv  dataset_92c95b_classification_results.csv  dataset_92c95b_eval_results.csv  dorothea_classification_results.csv  dorothea_highdim_classification_results.csv  dorothea_highdim_eval_results.csv  dorothea_spectral_metrics.csv  dorothea_umap_embeddings_gaussian_best.csv  (+3 more)
wiring_comparative/: Cargo.toml
wiring_comparative/python/: plot.py
wiring_comparative/src/: main.rs
wiring_sparse/: 003_sparse_output.txt  Cargo.toml
wiring_sparse/src/: main.rs
(+11 files in other folders)
