[package]
name = "wiring_sparse"
version = "0.1.0"
edition = "2024"

[dependencies]
arrowspace = { version = "0.25.12", features = ["storage"] }
ndarray = "0.15"
ndarray-npy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
log = "0.4.28"
env_logger = "0.11.8"
